# BracketsCheck.macos

./: CMakeLists.txt
src/: BracketsCheck.mm
